--- a/frontend/src/pages/home/styles.css
+++ b/frontend/src/pages/home/styles.css
@@ -4,3 +4,24 @@
     box-sizing: border-box;
   }
   
+.text-input {
+    width: 100%;
+    font-size: 20px;
+    padding: 5px 10px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 100vh;
+  background: #eee;
+  padding: 30px;
+}
+
+.search-container {
+  margin-bottom: 30px;
+}
+
+search-container h1 {
+  margin-bottom: 30px;
+}
