--- a/frontend/src/components/post-card/styles.css
+++ b/frontend/src/components/post-card/styles.css
@@ -3,6 +3,9 @@
     background: #fff;
     box-shadow:  0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 100ms ease-in-out;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
   
   .post:hover {
@@ -10,7 +13,8 @@
   }
   
   .post img {
-    max-width: 100%;
+    width: 100%;
+    height: 450px;
   }
   
   .post-content {
