--- a/frontend/src/pages/home/home.styles.css
+++ b/frontend/src/pages/home/home.styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial;
   }
   
 .text-input {
@@ -24,4 +25,98 @@
 
 search-container h1 {
   margin-bottom: 30px;
+}
+
+.header {
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 20vh;
+  background: #10141b;
+  padding: 30px;
+}
+
+.main-title {
+  color: #fff;
+  padding-bottom: 30px;
+}
+
+.house-title {
+  padding-bottom: 30px;
+}
+
+.button-container {
+  min-height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.slytherin {
+  background: repeating-linear-gradient(
+    45deg,
+    #7a7a7a,
+    #7a7a7a 3px,
+    #0b3a07 3px,
+    #0b3a07 9px,
+    #7a7a7a 9px,
+    #7a7a7a 10px,
+    #0b3a07 10px,
+    #0b3a07 30px);
+}
+
+.gryffindor {
+  background: repeating-linear-gradient(
+  45deg,
+  #c6a513,
+  #c6a513 3px,
+  #6d0000 3px,
+  #6d0000 9px,
+  #c6a513 9px,
+  #c6a513 10px,
+  #6d0000 10px,
+  #6d0000 30px);
+}
+
+.ravenclaw {
+  background: repeating-linear-gradient(
+    45deg,
+    #7a7a7a,
+    #7a7a7a 3px,
+    #191c68 3px,
+    #191c68 9px,
+    #7a7a7a 9px,
+    #7a7a7a 10px,
+    #191c68 10px,
+    #191c68 30px);
+}
+
+.hufflepuff {
+  background: repeating-linear-gradient(
+    45deg,
+    #161616,
+    #161616 3px,
+    #c6a513 3px,
+    #c6a513 9px,
+    #161616 9px,
+    #161616 10px,
+    #c6a513 10px);
+}
+
+.button {
+  width: 170px;
+  height: 60px;
+  color: #000;
+  border: none;
+  padding: 15px 30px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 1px solid #757575;
+}
+
+.inside-button {
+  background-color: #ffe082;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 20px;
+  border: 2px solid #ffe082;
 }
